tests/broken/writ-unclosed-tag.stderr
error: Expecting the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ-unclosed-tag.rs:4:20
  |
4 | #[oxiplate = "{{ foo"]
  |                    ^
